--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -1,9 +1,8 @@
 <nav>
     <details>
         <summary>Prodotti Logitech</summary>
-        <a href="logitech-mx-keys-s.html">MX Keys S</a><br>
-        <a href="logitech-mx-master-3s.html">MX Master 3S</a><br>
-        <a href="guida-combo.html">Combo MX</a>
+        <a href="https://eugenioguidi.github.io/logitech-mx-keys-s.html">MX Keys S</a><br>
+        <a href="#">MX Master 3S</a><br>
+        <a href="#">Combo MX</a>
     </details>
-    <a href="#">Contatti</a>
 </nav>
