add href for file logitech-mx-master-3s in header's nav

--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -2,7 +2,7 @@
     <details>
         <summary>Prodotti Logitech</summary>
         <a href="https://eugenioguidi.github.io/logitech-mx-keys-s.html">MX Keys S</a><br>
-        <a href="#">MX Master 3S</a><br>
+        <a href="https://eugenioguidi.github.io/logitech-mx-master-3s.html">MX Master 3S</a><br>
         <a href="#">Combo MX</a>
     </details>
 </nav>
