--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-body, body > main, body > main > article, body > main > article > section, body > main > article > section > p, body > main > article > section > h2, body > main > article > section > h3, body > main > article > section > ul, body > main > article > section > figure{
+body, body > main, body > main > div > article, body > main > div > article > section, body > main > div > article > section > p, body > main > div > article > section > h2, body > main > div > article > section > h3, body > main > div > article > section > ul, body > main > div > article > section > figure{
     margin: 0px;
     padding: 0px;
 }
@@ -8,13 +8,13 @@ body > main{
     padding: 20px;
 }
 
-body > main > article > section{
+body > main > div > article > section{
     background-color: white;
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 10px;
 }
 
-body > header > h1, body > main > article > section > h2{
+body > header > h1, body > main > div > article > section > h2{
     text-align: center;
 }
