--- a/css/common.css
+++ b/css/common.css
@@ -12,14 +12,21 @@ body > main{
     padding: 20px 50px;
 }
 
+body > main > div{
+    margin: 0 auto;
+    max-width: 800px;
+}
+
 body > main > div > article > section{
     background-color: white;
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 5px -5px 5px gray;
+    font-family: "Inter", sans-serif;
 }
 
 body > header > h1, body > main > div > article > section > h2{
     text-align: center;
+    font-family: sans-serif;
 }
