--- a/css/common.css
+++ b/css/common.css
@@ -30,3 +30,11 @@ body > header > h1, body > main > div > article > section > h2{
     text-align: center;
     font-family: sans-serif;
 }
+
+@media (max-width: 768px) {
+
+    body > main{
+        padding: 20px 20px;
+    }
+
+}
