change back ground coloro of main

--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,7 @@ body > main > div > article figure > a > img{
 }
 
 body > main{
-    background-color: rgb(224, 224, 224);
+    background: linear-gradient(to bottom right, #163D6A, #10ACE0);
     padding: 20px 50px;
 }
 
