--- a/css/common.css
+++ b/css/common.css
@@ -22,7 +22,7 @@ body > main > div > article > section{
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 5px -5px 5px gray;
+    box-shadow: 5px -5px 5px black;
     font-family: "Inter", sans-serif;
 }
 
