--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -1,3 +1,7 @@
+<a href="https://eugenioguidi.github.io">
+    <img class="logo" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
+</a>
+
 <nav>
     <details>
         <summary>Prodotti Logitech</summary>
