--- a/css/common.css
+++ b/css/common.css
@@ -39,6 +39,10 @@ main{
     margin-bottom: 15px;
 }
 
+.review-section p, .review-section li{
+    color: #424242;
+}
+
 header h1, .review-section h2 {
     text-align: center;
     font-family: sans-serif;
