--- a/css/common.css
+++ b/css/common.css
@@ -13,8 +13,11 @@
     margin-bottom: 20px;
 }
 
-main{
+body{
     background: linear-gradient(to bottom right, #163D6A, #10ACE0);
+}
+
+main{
     padding: 20px 50px;
 }
 
