--- a/css/common.css
+++ b/css/common.css
@@ -14,12 +14,12 @@
 }
 
 body{
-    
+    background: linear-gradient(to bottom right, #163D6A, #10ACE0);
 }
 
 main{
     padding: 20px 50px;
-    background: linear-gradient(to bottom right, #163D6A, #10ACE0);
+    
 }
 
 .container {
@@ -96,7 +96,7 @@ header h1, .review-section h2, .review-section h3{
     margin: 0 0 8px 0;
     font-size: 16px;
     font-weight: bold;
-    display: inline-block;
+    max-width: fit-content;
 }
 
 .cta-amazon-button {
