--- a/css/common.css
+++ b/css/common.css
@@ -14,12 +14,12 @@
 }
 
 body{
-    background: linear-gradient(to bottom right, #163D6A, #10ACE0);
+    
 }
 
 main{
     padding: 20px 50px;
-    
+    background: linear-gradient(to bottom right, #163D6A, #10ACE0);
 }
 
 .container {
@@ -70,7 +70,7 @@ header h1, .review-section h2, .review-section h3{
     border: 1px solid #ddd;
     padding: 12px;
     border-radius: 8px;
-    max-width: 450px;
+    max-width: fit-content;
     margin: 16px auto;
     background-color: #fff;
     box-shadow: 0 2px 6px rgba(0,0,0,0.05);
