--- a/css/common.css
+++ b/css/common.css
@@ -123,4 +123,12 @@ header h1, .review-section h2, .review-section h3{
         padding: 20px 20px;
     }
 
+    .cta-amazon-img {
+    width: 130px;
+    height: auto;
+    object-fit: contain;
+    margin-right: 16px;
+    flex-shrink: 0;
+}
+
 }
