--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -2,11 +2,30 @@
     <img class="logo" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
 </a>
 
-<nav>
-    <details>
-        <summary>Prodotti Logitech</summary>
-        <a href="https://eugenioguidi.github.io/logitech-mx-keys-s.html">MX Keys S</a><br>
-        <a href="https://eugenioguidi.github.io/logitech-mx-master-3s.html">MX Master 3S</a><br>
-        <a href="#">Combo MX</a>
-    </details>
+<div class="hamburger" onclick="toggleMenu()">
+    ☰
+</div>
+
+</div>
+
+<!-- Menu -->
+<nav id="mobileMenu" class="mobile-menu">
+    <ul>
+        <li>
+            <button class="submenu-toggle">Mouse ▾</button>
+            <ul class="submenu">
+                <li><a href="logitech-mx-master-3s.html">MX Master 3S</a></li>
+                <li><a href="#">Lift Vertical</a></li>
+                <li><a href="#">Anywhere 3</a></li>
+            </ul>
+        </li>
+
+        <li>
+            <button class="submenu-toggle">Tastiere ▾</button>
+            <ul class="submenu">
+                <li><a href="logitech-mx-keys-s.html">MX Keys S</a></li>
+                <li><a href="#">K380</a></li>
+            </ul>
+        </li>
+    </ul>
 </nav>
