--- a/css/common.css
+++ b/css/common.css
@@ -187,6 +187,10 @@ header h1, .review-section h2, .review-section h3{
     object-fit: contain;
     margin-right: 16px;
     flex-shrink: 0;
-}
+    }
+    
+    .mobile-menu{
+        width: 200px;
+    }
 
 }
