--- a/css/common.css
+++ b/css/common.css
@@ -117,16 +117,14 @@ header h1, .review-section h2, .review-section h3{
     position: fixed;
     top: 15px;
     left: 15px;
-
     font-size: 28px;
     cursor: pointer;
     padding: 10px;
-
     background: #222;
     color: white;
     border-radius: 6px;
-
-    z-index: 10000; /* sopra a tutto */
+    z-index: 10000;
+    transition: opacity 0.3s ease;
 }
 
 .mobile-menu {
