fixed error in html of nav

--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -2,7 +2,7 @@
     <img class="logo" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
 </a>
 
-<div class="hamburger" onclick="toggleMenu()">
+<div class="hamburger" onclick="toggleMenu(event)">
     ☰
 </div>
 
