--- a/css/common.css
+++ b/css/common.css
@@ -124,26 +124,27 @@ header h1, .review-section h2, .review-section h3{
 }
 
 .mobile-menu {
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: 50px;
     left: 0;
     width: 260px;
-    height: 100%;
     background: #222;
-    padding-top: 60px;
-
-    transform: translateX(-100%);
-    transition: transform 0.35s ease;
-    z-index: 9999;
+    padding-top: 10px;
+    border-radius: 6px;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.3s ease;
+    z-index: 1000;
 }
 
 .mobile-menu.active {
-    transform: translateX(0);
+    max-height: 1000px;
 }
 
 .mobile-menu ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 .mobile-menu li {
