--- a/html/template/footer.html
+++ b/html/template/footer.html
@@ -1,4 +1,4 @@
 <section id="contatti">
-    <h2>Contattaci</h2>
     <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
+    <p>&copy; 2026 Logitechie. Tutti i diritti riservati.</p>
 </section>
