--- a/html/template/footer.html
+++ b/html/template/footer.html
@@ -1,4 +1,5 @@
-<section id="contatti">
+<section id="contatti" class="contatti">
     <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
-    <p>&copy; 2026 Logitechie. Tutti i diritti riservati.</p>
+    <p>Ciao! Sono Eugenio, appassionato di tecnologia e prodotti Logitech. Ho creato questo sito per condividere recensioni oneste e consigli pratici sui prodotti che utilizzo ogni giorno.</p>
+    <p id="diritti-riservati" class="diritti-riservati">&copy; 2026 Logitechie. Tutti i diritti riservati</p>
 </section>
