--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -1,5 +1,5 @@
 <a href="https://eugenioguidi.github.io">
-    <img class="logo" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" />
+    <img class="logo-1" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo-1" />
 </a>
 
 <div class="hamburger" onclick="toggleMenu(event)">
