fixed some style in footer

--- a/css/common.css
+++ b/css/common.css
@@ -172,13 +172,13 @@ header h1, .review-section h2, .review-section h3{
     max-height: 500px;
 }
 
-
+.diritti-riservati, .domande{
+    text-align: center;
+}
 
 .diritti-riservati {
-    text-align: center;
     background: linear-gradient(to bottom right, #163D6A, #10ACE0);
     color: white;
-    margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
