add some fix to footer

--- a/css/common.css
+++ b/css/common.css
@@ -172,7 +172,8 @@ header h1, .review-section h2, .review-section h3{
     max-height: 500px;
 }
 
-.diritti-riservati, .domande{
+.diritti-riservati, .domande, .chi-sono{
+    padding: 5px 0px;
     text-align: center;
 }
 
