--- a/html/template/footer.html
+++ b/html/template/footer.html
@@ -1,5 +1,7 @@
 <section id="contatti" class="contatti">
-    <img class="logo-2" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo-2" />
+    <a href="https://eugenioguidi.github.io">
+        <img class="logo-2" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo-2" />
+    </a>
     <p id="domande" class="domande">Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
     <p id="chi-sono" class="chi-sono">Ciao! Sono Eugenio, appassionato di tecnologia e prodotti Logitech. Ho creato questo sito per condividere recensioni oneste e consigli pratici sui prodotti che utilizzo ogni giorno.</p>
     <p id="diritti-riservati" class="diritti-riservati">&copy; 2026 Logitechie. Tutti i diritti riservati</p>
