--- a/css/common.css
+++ b/css/common.css
@@ -175,6 +175,7 @@ header h1, .review-section h2, .review-section h3{
 .diritti-riservati, .domande, .chi-sono{
     padding: 5px 0px;
     text-align: center;
+    margin: 0% 5%;
 }
 
 .diritti-riservati {
