add fix to footer style

--- a/css/common.css
+++ b/css/common.css
@@ -172,7 +172,7 @@ header h1, .review-section h2, .review-section h3{
     max-height: 500px;
 }
 
-.diritti-riservati, .chi-sono{
+.domande, .chi-sono{
     padding: 5px 0px;
     text-align: center;
     margin: 0% 5%;
