add href of mx master 3s

--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -14,7 +14,7 @@
         <li>
             <button class="submenu-toggle">Mouse ▾</button>
             <ul class="submenu">
-                <li><a href="logitech-mx-master-3s.html">MX Master 3S</a></li>
+                <li><a href="https://eugenioguidi.github.io/logitech-mx-master-3s.html">MX Master 3S</a></li>
                 <li><a href="#">Lift Vertical</a></li>
                 <li><a href="#">Anywhere 3</a></li>
             </ul>
