--- a/css/common.css
+++ b/css/common.css
@@ -62,6 +62,7 @@ header h1, .review-section h2 {
     margin-top: 8px;
     margin-bottom: 20px;
     line-height: 1.5;
+    text-align: center;
 }
 
 header h1, .review-section h2, .review-section h3{
