--- a/html/template/header-nav.html
+++ b/html/template/header-nav.html
@@ -1,4 +1,4 @@
-<a href="https://eugenioguidi.github.io">
+<a href="https://eugenioguidi.github.io" class="logo-link">
     <img class="logo-1" src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo-1" />
 </a>
 
