add affiliazione centered

--- a/css/common.css
+++ b/css/common.css
@@ -198,7 +198,7 @@ header h1, .review-section h2, .review-section h3{
     max-height: 500px;
 }
 
-.domande, .chi-sono{
+.domande, .chi-sono, .affiliazione{
     padding: 5px 0px;
     text-align: center;
     margin: 0% 5%;
